# jini

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/app/: main.nim
src/libjini/: jini.cpp
